post method added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,9 +7,17 @@
 </head>
 <body>
     <h1> Hello i am ready for spring boot</h1>
-    <form action="calculation" method="get">
+ 
+  <form action="calculation" method="get">
         <input type="text" name="num1">
         <input type ="text" name ="num2">
+        <button type="submit"> submit </button>
+
+    </form>
+
+    <form action="securec" method="post">
+        <input type="text" name="a">
+        <input type ="text" name ="b">
         <button type="submit"> submit </button>
 
     </form>
